{
  "version": 4,
  "terraform_version": "1.9.6",
  "serial": 54,
  "lineage": "1e070560-6832-173e-b3fc-c64b2abaa765",
  "resources": [
    {
      "module": "module.My_EC2_Instance",
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-066784287e358dad1",
            "arn": "arn:aws:ec2:us-east-1:195361376059:instance/i-03974f2be8010dbbc",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-03974f2be8010dbbc",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "2-Teir-App",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-07dc3b81e174fefdb",
            "private_dns": "ip-10-0-1-215.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.215",
            "public_dns": "ec2-52-0-201-148.compute-1.amazonaws.com",
            "public_ip": "52.0.201.148",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-05ae242e25bb93f5f",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d8663979a0abbd10",
            "tags": {
              "Name": "public-ec2"
            },
            "tags_all": {
              "Name": "public-ec2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-06cb0f0a119350b74"
            ]
          },
          "dependencies": [
            "module.My_VPC_Instance.aws_security_group.ssh_http",
            "module.My_VPC_Instance.aws_subnet.public_subnet",
            "module.My_VPC_Instance.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.My_VPC_Instance",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:195361376059:internet-gateway/igw-0f83bda3af5a3760f",
            "id": "igw-0f83bda3af5a3760f",
            "owner_id": "195361376059",
            "tags": {
              "Name": "main-vpc-gw"
            },
            "tags_all": {
              "Name": "main-vpc-gw"
            },
            "vpc_id": "vpc-0a0b9f489bb014b85"
          },
          "dependencies": [
            "module.My_VPC_Instance.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.My_VPC_Instance",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:195361376059:route-table/rtb-0c293a35401dfb8c1",
            "id": "rtb-0c293a35401dfb8c1",
            "owner_id": "195361376059",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f83bda3af5a3760f",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "main-vpc-public-rt"
            },
            "tags_all": {
              "Name": "main-vpc-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a0b9f489bb014b85"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.My_VPC_Instance.aws_internet_gateway.this",
            "module.My_VPC_Instance.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.My_VPC_Instance",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04b04c052311e052c",
            "route_table_id": "rtb-0c293a35401dfb8c1",
            "subnet_id": "subnet-0d8663979a0abbd10"
          },
          "dependencies": [
            "module.My_VPC_Instance.aws_internet_gateway.this",
            "module.My_VPC_Instance.aws_route_table.public_route_table",
            "module.My_VPC_Instance.aws_subnet.public_subnet",
            "module.My_VPC_Instance.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.My_VPC_Instance",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssh_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:195361376059:security-group/sg-06cb0f0a119350b74",
            "description": "Allow SSH and HTTP/8081 access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06cb0f0a119350b74",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8081,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8081
              }
            ],
            "name": "main-vpc-sg",
            "name_prefix": "",
            "owner_id": "195361376059",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "main-vpc-sg"
            },
            "tags_all": {
              "Name": "main-vpc-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a0b9f489bb014b85"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.My_VPC_Instance.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.My_VPC_Instance",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:195361376059:subnet/subnet-0d8663979a0abbd10",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d8663979a0abbd10",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "195361376059",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "main-vpc-public-subnet"
            },
            "tags_all": {
              "Name": "main-vpc-public-subnet"
            },
            "vpc_id": "vpc-0a0b9f489bb014b85"
          },
          "dependencies": [
            "module.My_VPC_Instance.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.My_VPC_Instance",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:195361376059:vpc/vpc-0a0b9f489bb014b85",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-035f20387e994a05f",
            "default_route_table_id": "rtb-01052e66f3224541a",
            "default_security_group_id": "sg-0e51fd2544352b977",
            "dhcp_options_id": "dopt-0baae64c676417802",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a0b9f489bb014b85",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01052e66f3224541a",
            "owner_id": "195361376059",
            "tags": {
              "Name": "main-vpc"
            },
            "tags_all": {
              "Name": "main-vpc"
            }
          }
        }
      ]
    }
  ]
}